tests/baselines/reference/symbolProperty47.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty47.ts(2,9): error TS2718: Duplicate declaration '[Symbol.hasInstance]'.
tests/cases/conformance/es6/Symbols/symbolProperty47.ts(3,9): error TS2322: Type '""' is not assignable to type 'number'.
tests/cases/conformance/es6/Symbols/symbolProperty47.ts(6,9): error TS2718: Duplicate declaration '[Symbol.hasInstance]'.
tests/cases/conformance/es6/Symbols/symbolProperty47.ts(10,1): error TS2322: Type '0' is not assignable to type 'string'.


==== tests/cases/conformance/es6/Symbols/symbolProperty47.ts (4 errors) ====
    class C {
        get [Symbol.hasInstance]() {
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2718: Duplicate declaration '[Symbol.hasInstance]'.
            return "";
            ~~~~~~~~~~
!!! error TS2322: Type '""' is not assignable to type 'number'.
        }
        // Should take a string
        set [Symbol.hasInstance](x: number) {
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2718: Duplicate declaration '[Symbol.hasInstance]'.
        }
    }
    
    (new C)[Symbol.hasInstance] = 0;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '0' is not assignable to type 'string'.
    (new C)[Symbol.hasInstance] = "";